--- a/layout.css
+++ b/layout.css
@@ -7,37 +7,6 @@
 	perspective: 53px;
 }
 
-.panel {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	opacity: 0.7;
-	color: white;
-	background: red;
-}
-
-.panel{
-	
-}
-
-#side-floor .panel1 {
-	transform: rotateX( 45deg ) translate3d(0px,100px,0px);
-}
-
-.panel2 {
-	 
-    transition: 5s ease-in-out;
-	 transform: rotateY( 121deg ) translate3d( 116px, -23px, -123px ) skewY(-20deg);
-}
-
-.panel2-transform {
-	 
-    transition: 5s ease-in-out;
-	transform: rotateY( 121deg ) translate3d( 20px, -23px, -123px ) skewY(-20deg);
-	background: red;
-}
-
-
 body{
   background-color: BLACK;
 }
@@ -71,16 +40,24 @@ body{
 .item{
   height: 100%;
   display:inline-block;
+  padding:1px;
 }
 
 .item1, .item2, .item3{
-  width: 32%;
+  width: 28%;
 }
 
 .item4, .item5, .item6, .item7{
-  width: 24%;
+  width: 20%;
 }
 
+.item iframe{
+  width: 98%;
+  height: 98%;
+  margin: auto;
+}
+
+/*
 .item1{
   background: #20B2AA;
 }
@@ -102,5 +79,5 @@ body{
 .item7{
   background: #8B7355;
 }
-
+*/
  
